--- a/vph_report/src/componenti/conf_save/riepilogo/gest_riepilogo.css
+++ b/vph_report/src/componenti/conf_save/riepilogo/gest_riepilogo.css
@@ -8,6 +8,7 @@
 .div_infos_recap{
     display: flex;
     border-bottom: 1px solid black;
+    margin-top: 40px;
 }
 
 .div_image_recap{
@@ -27,9 +28,33 @@
 .div_recap_recap {
     display: flex;
     flex-direction: column;
+    align-content: center;
+    text-align: center;
 }
 
 .div_recap_text_recap{
+    margin: 25px;
+    min-height: 225px;
+    background: #d5d0ce;
+    border: 2px solid black;
     padding: 15px;
-    font-size: 2.5rem;
+    font-size: 1.75rem;
+    /*align-items: center;*/
+    /*align-self: center;*/
+    border-radius: 15px;
+    align-items: center;
+}
+
+.div_recap_text_recap_alertAcq{
+    margin: 25px;
+    min-height: 225px;
+    background: #d5d0ce;
+    border: 2px solid black;
+    padding: 15px;
+    font-size: 1.75rem;
+    /*align-items: center;*/
+    /*align-self: center;*/
+    border-radius: 15px;
+    align-items: center;
+    color: red;
 }
