--- a/vph_report/src/Pages/gestReport.css
+++ b/vph_report/src/Pages/gestReport.css
@@ -1,7 +1,10 @@
 .div_container_pageReport{
 
 }
-.div_title_pageReport{
+.div_header_pageReport{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     padding: 15px;
     text-align: center;
     border-bottom: 1px solid black;
